# openpi-xfg

./: .gitignore  AGENTS.md  Dockerfile  Dockerfile2  README.md  install_env.sh  pi05.txt  prompting.txt  pyproject.toml  train-xfg.sh  train-xfg_docker.sh  train-xfg_full.sh
examples/: inference.ipynb
examples/libero/: lerobot_to_libero_rlds.py
src/openpi/: transforms.py
src/openpi/policies/: piper_policy.py
src/openpi/training/: config.py  weight_loaders.py
